--- a/styles/architecture.css
+++ b/styles/architecture.css
@@ -10,8 +10,15 @@
 }
 
 /* shared styles */
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
 .display-flex{
     display: flex;
+}
+.text-primary{
+    color: rgba(255, 144, 14, 1);
 }
 /* dark 02 */
 .text-gray{
@@ -32,6 +39,13 @@
     font-weight: 600;
     border-radius: 8px;
     border: none;
+}
+main > section{
+    margin-top: 130px;
+}
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
 }
 
 /* header styles */
@@ -76,10 +90,49 @@
     width: 100%;
 }
 
+/* feature related style */
+.teams{
+    align-items: center;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2 , 1fr);
+    gap: 24px;
+}
+
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+
+#quick-list{
+    font-weight: 500;
+}
+
 
 /* responsive media query */
 @media screen and (max-width: 576px) {
-    .navbar , .nav-links {
+    .navbar , 
+    .nav-links , 
+    .teams {
         flex-direction: column;
+    }
+    .team-img-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .our-features{
+        margin-left: 20px;
+    }
+
+}
+
+/* medium size device */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin-left: 50px auto;
     }
 }
