--- a/styles/architecture.css
+++ b/styles/architecture.css
@@ -139,6 +139,22 @@ main > section{
     max-width: 540px;
 }
 
+
+
+/* sponsor related styles */
+.sponsors-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsors-company{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+}
+.sponsors-company img {
+    filter: grayscale(100%);
+}
+
 /* responsive media query */
 @media screen and (max-width: 576px) {
     .navbar , 
@@ -146,8 +162,18 @@ main > section{
     .teams {
         flex-direction: column;
     }
-    .team-img-container{
-        grid-template-columns: repeat(1,1fr);
+    .team-img-container , 
+    .facts-container,
+    .sponsors-company{
+        grid-template-columns: 1fr;
+    }
+    ..sponsors-company{
+        justify-items: center;
+        gap: 50px;
+    }
+    .facts-container{
+        justify-items: center;
+        gap: 24px;
     }
     .our-features{
         margin-left: 20px;
@@ -162,5 +188,10 @@ main > section{
     }
     .our-features{
         margin-left: 50px auto;
+    }
+    .sponsors-company , .facts-container{
+        grid-template-columns: repeat(3,1fr);
+        gap: 50px;
+    justify-items: center;
     }
 }
