all set work remaining in the footer

--- a/styles/architecture.css
+++ b/styles/architecture.css
@@ -133,6 +133,20 @@ main > section{
     margin-bottom: 0;
 
 }
+#experienced-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+#experienced-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+.feature-arch img {
+    width: 100%;
+}
 
 /* some fact related styles */
 .facts-container{
@@ -183,7 +197,8 @@ main > section{
 @media screen and (max-width: 576px) {
     .navbar , 
     .nav-links , 
-    .teams {
+    .teams,
+    .features {
         flex-direction: column;
     }
     .team-img-container , 
@@ -202,12 +217,19 @@ main > section{
     .our-features{
         margin-left: 20px;
     }
+    .sponsors-company{
+        margin-top: 20px
+    }
+    #experienced-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
 
 }
 
 /* medium size device */
 @media screen and (min-width:576px) and (max-width:992px) {
-    .teams{
+    .teams , .features{
         flex-direction: column;
     }
     .our-features{
